@@ -63,7 +63,7 @@ static char swapPolarization(char pol)
 	}
 }
 
-static int getRecordChannel(const string chanName, const map<string,Tracks>& ch2tracks, const VexFormat& F, int n)
+static int getRecordChannel(const string chanName, const map<string,Tracks> &ch2tracks, const VexFormat &F, int n)
 {
 	int delta, track;
 	map<string,Tracks>::const_iterator it;
@@ -79,7 +79,7 @@ static int getRecordChannel(const string chanName, const map<string,Tracks>& ch2
 			return -1;
 		}
 
-		const Tracks& T = it->second;
+		const Tracks &T = it->second;
 		delta = 2*(T.sign.size() + T.mag.size());
 		track = T.sign[0];
 
@@ -107,7 +107,7 @@ static int getRecordChannel(const string chanName, const map<string,Tracks>& ch2
 			return -1;
 		}
 
-		const Tracks& T = it->second;
+		const Tracks &T = it->second;
 		delta = T.sign.size() + T.mag.size();
 		track = T.sign[0];
 
@@ -149,7 +149,7 @@ double vexDate(char *value)
 	return mjd;
 }
 
-static int getAntennas(VexData *V, Vex *v, const CorrParams& params)
+static int getAntennas(VexData *V, Vex *v, const CorrParams &params)
 {
 	VexAntenna *A;
 	struct site_position *p;
@@ -174,7 +174,7 @@ static int getAntennas(VexData *V, Vex *v, const CorrParams& params)
 		}
 		A = V->newAntenna();
 		A->name = stn;
-		A->nameInVex = stn;
+		A->defName = stn;
 		Upper(A->name);
 
 		p = (struct site_position *)get_station_lowl(stn, T_SITE_POSITION, B_SITE, v);
@@ -280,7 +280,7 @@ static int getAntennas(VexData *V, Vex *v, const CorrParams& params)
 	return 0;
 }
 
-static int getSources(VexData *V, Vex *v, const CorrParams& params)
+static int getSources(VexData *V, Vex *v, const CorrParams &params)
 {
 	VexSource *S;
 	char *p;
@@ -288,7 +288,7 @@ static int getSources(VexData *V, Vex *v, const CorrParams& params)
 	for(char *src = get_source_def(v); src; src=get_source_def_next())
 	{
 		S = V->newSource();
-		S->name = src;
+		S->defName = src;
 
 		for(p = (char *)get_source_lowl(src, T_SOURCE_NAME, v);
 		    p != 0;
@@ -310,7 +310,7 @@ static int getSources(VexData *V, Vex *v, const CorrParams& params)
 			exit(0);
 		}
 
-		const SourceSetup *setup = params.getSourceSetup(S->name);
+		const SourceSetup *setup = params.getSourceSetup(S->defName);
 		if(setup)
 		{
 			if(setup->calCode > ' ')
@@ -388,7 +388,7 @@ static VexInterval adjustTimeRange(map<string, double> &antStart, map<string, do
 	return VexInterval(mjdStart, mjdStop);
 }
 
-static int getScans(VexData *V, Vex *v, const CorrParams& params)
+static int getScans(VexData *V, Vex *v, const CorrParams &params)
 {
 	VexScan *S;
 	char *scanId;
@@ -467,17 +467,17 @@ static int getScans(VexData *V, Vex *v, const CorrParams& params)
 		}
 
 		string scanName(scanId);
-		string sourceName((char *)get_scan_source(L));
-		string modeName((char *)get_scan_mode(L));
+		string sourceDefName((char *)get_scan_source(L));
+		string modeDefName((char *)get_scan_mode(L));
 
-		const VexSource *src = V->getSourceByDefName(sourceName);
+		const VexSource *src = V->getSourceByDefName(sourceDefName);
 		if(src == 0)
 		{
 			cerr << "Developer error! src == 0" << endl;
 			exit(0);
 		}
 
-		string corrSetupName = params.findSetup(scanName, sourceName, modeName, src->calCode, 0);
+		string corrSetupName = params.findSetup(scanName, sourceDefName, modeDefName, src->calCode, 0);
 
 		if(corrSetupName == "" || corrSetupName == "SKIP")
 		{
@@ -510,8 +510,8 @@ static int getScans(VexData *V, Vex *v, const CorrParams& params)
 		S->setTimeRange(timeRange);
 		S->name = scanName;
 		S->stations = stations;
-		S->modeName = modeName;
-		S->sourceName = sourceName;
+		S->modeDefName = modeDefName;
+		S->sourceDefName = sourceDefName;
 		S->corrSetupName = corrSetupName;
 
 		// Add to event list
@@ -535,11 +535,11 @@ static int getScans(VexData *V, Vex *v, const CorrParams& params)
 	return 0;
 }
 
-static int getModes(VexData *V, Vex *v, const CorrParams& params)
+static int getModes(VexData *V, Vex *v, const CorrParams &params)
 {
 	VexMode *M;
 	void *p;
-	char *modeId;
+	char *modeDefName;
 	int link, name;
 	char *value, *units;
 	double freq, bandwidth, sampRate;
@@ -556,24 +556,24 @@ static int getModes(VexData *V, Vex *v, const CorrParams& params)
 	map<string,char> bbc2pol;
 	map<string,Tracks> ch2tracks;
 
-	for(modeId = get_mode_def(v);
-	    modeId;
-	    modeId = get_mode_def_next())
+	for(modeDefName = get_mode_def(v);
+	    modeDefName;
+	    modeDefName = get_mode_def_next())
 	{
 		// don't bother building up modes that are not used
-		if(!V->usesMode(modeId))
+		if(!V->usesMode(modeDefName))
 		{
 			continue;
 		}
 
 		M = V->newMode();
-		M->name = modeId;
+		M->defName = modeDefName;
 
 		// get FREQ info
 		for(unsigned int a = 0; a < V->nAntenna(); a++)
 		{
-			const string& antName = V->getAntenna(a)->nameInVex;
-			string antName2 = V->getAntenna(a)->nameInVex;
+			const string &antName = V->getAntenna(a)->defName;
+			string antName2 = V->getAntenna(a)->defName;
 			const AntennaSetup *antennaSetup;
 
 			Upper(antName2);
@@ -583,7 +583,7 @@ static int getModes(VexData *V, Vex *v, const CorrParams& params)
 			ch2tracks.clear();
 			nTrack = 0;
 			nBit = 1;
-			VexFormat& F = M->formats[V->getAntenna(a)->name] = VexFormat();
+			VexFormat &F = M->formats[V->getAntenna(a)->name] = VexFormat();
 			antennaSetup = params.getAntennaSetup(antName2);
 			if(antennaSetup)
 			{
@@ -597,7 +597,7 @@ static int getModes(VexData *V, Vex *v, const CorrParams& params)
 			}
 
 			// Get sample rate
-			p = get_all_lowl(antName.c_str(), modeId, T_SAMPLE_RATE, B_FREQ, v);
+			p = get_all_lowl(antName.c_str(), modeDefName, T_SAMPLE_RATE, B_FREQ, v);
 			if(p == 0)
 			{
 				continue;
@@ -608,7 +608,7 @@ static int getModes(VexData *V, Vex *v, const CorrParams& params)
 			M->sampRate = sampRate;
 
 			// Get IF to pol map for this antenna
-			for(p = get_all_lowl(antName.c_str(), modeId, T_IF_DEF, B_IF, v);
+			for(p = get_all_lowl(antName.c_str(), modeDefName, T_IF_DEF, B_IF, v);
 			    p;
 			    p = get_all_lowl_next())
 			{
@@ -624,7 +624,7 @@ static int getModes(VexData *V, Vex *v, const CorrParams& params)
 			}
 
 			// Get BBC to pol map for this antenna
-			for(p = get_all_lowl(antName.c_str(), modeId, T_BBC_ASSIGN, B_BBC, v);
+			for(p = get_all_lowl(antName.c_str(), modeDefName, T_BBC_ASSIGN, B_BBC, v);
 			    p;
 			    p = get_all_lowl_next())
 			{
@@ -640,7 +640,7 @@ static int getModes(VexData *V, Vex *v, const CorrParams& params)
 			// Is it a Mark5 mode?
 			if(F.format == "")
 			{
-				p = get_all_lowl(antName.c_str(), modeId, T_TRACK_FRAME_FORMAT, B_TRACKS, v);
+				p = get_all_lowl(antName.c_str(), modeDefName, T_TRACK_FRAME_FORMAT, B_TRACKS, v);
 			}
 			else
 			{
@@ -659,7 +659,7 @@ static int getModes(VexData *V, Vex *v, const CorrParams& params)
 					}
 				}
 
-				for(p = get_all_lowl(antName.c_str(), modeId, T_FANOUT_DEF, B_TRACKS, v);
+				for(p = get_all_lowl(antName.c_str(), modeDefName, T_FANOUT_DEF, B_TRACKS, v);
 				    p;
 				    p = get_all_lowl_next())
 				{
@@ -714,7 +714,7 @@ static int getModes(VexData *V, Vex *v, const CorrParams& params)
 			}
 
 			// Is it an S2 mode?
-			p = get_all_lowl(antName.c_str(), modeId, T_S2_RECORDING_MODE, B_TRACKS, v);
+			p = get_all_lowl(antName.c_str(), modeDefName, T_S2_RECORDING_MODE, B_TRACKS, v);
 			if(p)
 			{
 				size_t f, g;
@@ -745,7 +745,7 @@ static int getModes(VexData *V, Vex *v, const CorrParams& params)
 			// Get rest of Subband information
 			int i = 0;
 			
-			for(p = get_all_lowl(antName.c_str(), modeId, T_CHAN_DEF, B_FREQ, v);
+			for(p = get_all_lowl(antName.c_str(), modeDefName, T_CHAN_DEF, B_FREQ, v);
 			    p;
 			    p = get_all_lowl_next())
 			{
@@ -787,7 +787,7 @@ static int getModes(VexData *V, Vex *v, const CorrParams& params)
 			{
 				if(params.overSamp > overSamp)
 				{
-					cerr << "Warning: Mode " << M->name << " subband " << M->overSamp.size() << 
+					cerr << "Warning: Mode " << M->defName << " subband " << M->overSamp.size() << 
 						": requested oversample factor " << params.overSamp << 
 						" is greater than the observed oversample factor " << overSamp << endl;
 				}
@@ -824,7 +824,7 @@ static void fixOhs(string &str)
 	}
 }
 
-static int getVSN(VexData *V, Vex *v, const CorrParams& params, const char *station)
+static int getVSN(VexData *V, Vex *v, const CorrParams &params, const char *station)
 {
 	Vsn *p;
 	llist *block;
@@ -896,7 +896,7 @@ static int getVSN(VexData *V, Vex *v, const CorrParams& params, const char *stat
 	return 0;
 }
 
-static int getVSNs(VexData *V, Vex *v, const CorrParams& params)
+static int getVSNs(VexData *V, Vex *v, const CorrParams &params)
 {
 	int r;
 
@@ -913,7 +913,7 @@ static int getVSNs(VexData *V, Vex *v, const CorrParams& params)
 	return 0;
 }
 
-static int getEOPs(VexData *V, Vex *v, const CorrParams& params)
+static int getEOPs(VexData *V, Vex *v, const CorrParams &params)
 {
 	llist *block;
 	Llist *defs;
@@ -1007,7 +1007,7 @@ static int getEOPs(VexData *V, Vex *v, const CorrParams& params)
 	return N;
 }
 
-static int getExper(VexData *V, Vex *v, const CorrParams& params)
+static int getExper(VexData *V, Vex *v, const CorrParams &params)
 {
 	llist *block;
 	Llist *defs;
@@ -1080,7 +1080,7 @@ void calculateScanSizes(VexData *V, const CorrParams &P)
 	for(int s = 0; s < nScan; s++)
 	{
 		scan = V->getScan(s);
-		mode = V->getMode(scan->modeName);
+		mode = V->getModeByDefName(scan->modeDefName);
 		setup = P.getCorrSetup(scan->corrSetupName);
 		nSubband = mode->subbands.size();
 		nBaseline = scan->stations.size()*(scan->stations.size()+1)/2;
@@ -1088,7 +1088,7 @@ void calculateScanSizes(VexData *V, const CorrParams &P)
 	}
 }
 
-VexData *loadVexFile(const CorrParams& P)
+VexData *loadVexFile(const CorrParams &P)
 {
 	VexData *V;
 	Vex *v;
