@@ -1,5 +1,5 @@
 /***************************************************************************
- *   Copyright (C) 2009 by Walter Brisken                                  *
+ *   Copyright (C) 2009-2010 by Walter Brisken                             *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU General Public License as published by  *
@@ -32,6 +32,6 @@
 
 #include "corrparams.h"
 
-VexData *loadVexFile(const CorrParams& P);
+VexData *loadVexFile(const CorrParams &P);
 
 #endif
