@@ -6,6 +6,7 @@ Version 1.0.4
 * oms2v2d: warn if both .skd and .vex are found; default to .vex
 * Source names were confused: no distiction was made between the vex "def" name and the source name.  Fixed.
 * Check for sources with illegal names
+* Improved function/variable naming to indicate explicitly where some def names are used
 
 Version 1.0.3
 ~~~~~~~~~~~~~
